--- a/DockerFile
+++ b/DockerFile
@@ -1,10 +1,12 @@
 # Dockerfile
 
 FROM node:18.16.0-alpine3.17
-RUN mkdir -p /realtime-chat-app
-WORKDIR /realtime-chat-app
-COPY package.json package-lock.json ./
+WORKDIR /app
+COPY package.json package-lock.json server.js Dockerfile deployment.yaml service.yaml ./
+RUN npm install react react-dom next pusher pusher-js sentiment
+RUN npm install express body-parser cors dotenv axios
 RUN npm install
-COPY components/ pages/  ./
+COPY ./components/ ./components/
+COPY ./pages/ ./pages/
 EXPOSE 3000
 CMD [ "npm", "start"]
