--- a/kubernetes/service.yaml
+++ b/kubernetes/service.yaml
@@ -3,11 +3,10 @@ kind: Service
 metadata:
   name: realtime-chat-app-service
 spec:
-  type: NodePort  # Changed from ClusterIP to NodePort
+  type: ClusterIP
   selector:
     app: realtime-chat-app
   ports:
     - protocol: TCP
       port: 3000
       targetPort: 3000
-      nodePort: 30007  # Optionally specify the node port, or let Kubernetes choose one
