--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react": "^18",
     "react-dom": "^18",
     "sentiment": "^5.0.2",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.7.5",
+    "winston": "^3.13.0",
+    "winston-logstash": "^0.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
