--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,9 +5,9 @@ services:
     ports:
       - "3000:3000"
     environment:
-      PUSHER_APP_ID: "${PUSHER_APP_ID}"
-      PUSHER_APP_KEY: "${PUSHER_APP_KEY}"
-      PUSHER_APP_SECRET: "${PUSHER_APP_SECRET}"
-      PUSHER_APP_CLUSTER: "${PUSHER_APP_CLUSTER}"
+      NEXT_PUBLIC_PUSHER_APP_ID: "${NEXT_PUBLIC_PUSHER_APP_ID}"
+      NEXT_PUBLIC_PUSHER_APP_KEY: "${NEXT_PUBLIC_PUSHER_APP_KEY}"
+      NEXT_PUBLIC_PUSHER_APP_SECRET: "${NEXT_PUBLIC_PUSHER_APP_SECRET}"
+      NEXT_PUBLIC_PUSHER_APP_CLUSTER: "${NEXT_PUBLIC_PUSHER_APP_CLUSTER}"
     volumes:
       - .:/app
