--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -20,23 +20,23 @@ spec:
         ports:
         - containerPort: 3000
         env:
-        - name: PUSHER_APP_ID
+        - name: NEXT_PUBLIC_PUSHER_APP_ID
           valueFrom:
             secretKeyRef:
               name: realtime-chat-app-secrets
-              key: PUSHER_APP_ID
-        - name: PUSHER_APP_KEY
+              key: NEXT_PUBLIC_PUSHER_APP_ID
+        - name: NEXT_PUBLIC_PUSHER_APP_KEY
           valueFrom:
             secretKeyRef:
               name: realtime-chat-app-secrets
-              key: PUSHER_APP_KEY
-        - name: PUSHER_APP_SECRET
+              key: NEXT_PUBLIC_PUSHER_APP_KEY
+        - name: NEXT_PUBLIC_PUSHER_APP_SECRET
           valueFrom:
             secretKeyRef:
               name: realtime-chat-app-secrets
-              key: PUSHER_APP_SECRET
-        - name: PUSHER_APP_CLUSTER
+              key: NEXT_PUBLIC_PUSHER_APP_SECRET
+        - name: NEXT_PUBLIC_PUSHER_APP_CLUSTER
           valueFrom:
             secretKeyRef:
               name: realtime-chat-app-secrets
-              key: PUSHER_APP_CLUSTER
+              key: NEXT_PUBLIC_PUSHER_APP_CLUSTER
