Kubernetes complete almost
Signed-off-by: Jay Rathod <jay.m.rathod.01@gmail.com>

--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: realtime-chat-app-container
-        image: jaraxxx/wsl_test:latest
+        image: jaraxxx/wsl_test:v1
         ports:
         - containerPort: 3000
         env:
