--- a/kubernetes/service.yaml
+++ b/kubernetes/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: realtime-chat-app-service
+  name: realtime-chat-app
 spec:
-  type: ClusterIP
   selector:
     app: realtime-chat-app
   ports:
     - protocol: TCP
       port: 3000
       targetPort: 3000
+  type: LoadBalancer
