--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "sentiment": "^5.0.2",
     "socket.io": "^4.7.5",
     "winston": "^3.13.0",
-    "winston-logstash": "^0.4.0"
+    "winston-logstash": "^0.4.0",
+    "winston-logstash-transport": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
