Final Project Pushes

--- a/kubernetes/deployment.yaml
+++ b/kubernetes/deployment.yaml
@@ -14,6 +14,7 @@ spec:
       labels:
         app: realtime-chat-app
     spec:
+      hostNetwork: true
       containers:
       - name: realtime-chat-app-container
         image: jaraxxx/wsl_test:final
