--- a/kubernetes/service.yaml
+++ b/kubernetes/service.yaml
@@ -7,6 +7,7 @@ spec:
     app: realtime-chat-app
   ports:
     - protocol: TCP
-      port: 80
+      port: 3000
       targetPort: 3000
+      nodePort: 30000
   type: LoadBalancer
